添加rmi远程调用对象功能测试